Remove unused files

--- a/src/common/css/variables/colors.scss
+++ b/src/common/css/variables/colors.scss
@@ -1,51 +1,6 @@
-$COLOR--white-two: #ffffff;
-$COLOR--white-three: #fafafa;
-$COLOR--topaz: #1a9cb0;
-$COLOR--steel-grey: #6f898d;
-$COLOR--tealish: #39c2d7;
-$COLOR--silver: #d2d7da;
-$COLOR--silver-opacity: #e5e9eb;
-$COLOR--silver-two: #e5e9eb;
-$COLOR--gunmetal: #516366;
-$COLOR--charcoal-grey: #464547;
-$COLOR--pale-grey-two: #eef1f2;
-$COLOR--pale-grey-three: #ebeef0;
-$COLOR--pale-grey-four: #f5f9fa;
-$COLOR--light-teal: #97dee8;
-$COLOR--light-teal-opacity: #e0f5f8;
-$COLOR--failed: #f36c4a;
-$COLOR--gray-91: #e9e9e9;
-$COLOR--gray-80: #cccccc;
-$COLOR--gray: #9b9b9b;
-$COLOR--white: #f5f5f5;
-$COLOR--skipped: #bdc7cc;
-$COLOR--booger: #a3c644;
-$COLOR--grid-expand: #fbfdfd;
-$COLOR--tealish-hover: #d7f3f7;
-$COLOR--warm-grey: #999999;
-
-$COLOR--system-issue: #0274d1;
-$COLOR--passed: #87b77b;
-$COLOR--product-bug: #ec3900;
-$COLOR--automation-bug: #f7d63e;
-$COLOR--to-investigate: #ffb743;
-$COLOR--black-2: #393939;
-$COLOR--windows-blue: #428bca;
-$COLOR--brownish-grey: #666666;
-$COLOR--gray-47: #777777;
-$COLOR--orange-red: #ff3222;
-$COLOR--white-four: #f9f9f9;
-$COLOR--light-red: #feecea;
-$COLOR--tomato: #ed5a43;
-$COLOR--dark-pastel-green: #5cb755;
-$COLOR--violet: #c5cae9;
-$COLOR--azure: #03a9f4;
-$COLOR--blush: #f0baa9;
-$COLOR--light-yellow: #f5f9ec;
-$COLOR--orangish: #fb7848;
-$COLOR--has-permission: #edf4da;
-$COLOR--khaki-green: #7f993a;
-$COLOR--fatal: #c2352b;
-$COLOR--greenish-beige: #bed379;
-$COLOR--light-blue: #effafb;
-$COLOR--organish: #fb7848;
+$COLOR--white: #FFF;
+$COLOR--black: #000;
+$COLOR--topaz: #1A9CB0;
+$COLOR--tealish: #39C2D7;
+$COLOR--booger: #A3C644;
+$COLOR--tomato: #ED5A43;
