--- a/src/components/modal/modalLayout/modalContent/modalContentHeading/modalContentHeading.scss
+++ b/src/components/modal/modalLayout/modalContent/modalContentHeading/modalContentHeading.scss
@@ -4,14 +4,12 @@
   height: 30px;
   box-sizing: border-box;
   padding: 0 10px;
-  background-color: $COLOR--white-four;
   font-family: $FONT-SEMIBOLD;
   font-size: 12px;
   line-height: 30px;
   text-transform: uppercase;
-  color: $COLOR--gray-47;
 
   &.error {
-    color: $COLOR--orange-red;
+    color: $COLOR--tomato;
   }
 }
