--- a/src/components/notification/notificationContainer/notificationItem/notification.scss
+++ b/src/components/notification/notificationContainer/notificationItem/notification.scss
@@ -6,11 +6,9 @@
   text-align: center;
   color: $COLOR--white;
   padding: 10px;
-  background: $COLOR--windows-blue;
-  text-shadow: 0 1px 1px darken($COLOR--windows-blue, 10%);
   &.success {
-    background: $COLOR--dark-pastel-green;
-    text-shadow: 0 1px 1px darken($COLOR--dark-pastel-green, 10%);
+    background: $COLOR--booger;
+    text-shadow: 0 1px 1px darken($COLOR--booger, 10%);
   }
   &.error {
     background: $COLOR--tomato;
