--- a/src/pages/inside/pluginPage/exceptionFrames/exceptionFrame/exceptionFrame.scss
+++ b/src/pages/inside/pluginPage/exceptionFrames/exceptionFrame/exceptionFrame.scss
@@ -1,11 +1,12 @@
 .exception-frame {
-
+  border-bottom: 1px solid #e5e9eb;
 }
 
 .name-row {
   display: flex;
   cursor: pointer;
-  padding: 0.3em 0 0.3em calc(3% + 60px);
+  padding: 6px 0 6px 10%;
+  font-size: 12px;
 }
 
 .expand-icon {
@@ -15,6 +16,10 @@
   margin: 0;
   transform: rotate(-90deg);
   transition: transform 200ms linear;
+
+  svg {
+    fill: #94a2ac;
+  }
 
   &.expanded {
     transform: rotate(0deg);
@@ -27,19 +32,22 @@
 
 .name {
   word-break: break-all;
-  border-bottom: 1px solid;
+
+  &.expanded {
+    font-family: $FONT-SEMIBOLD;
+  }
 }
 
 .variables {
-  padding: 3em 50px;
-  margin-left: calc(3% + 60px);
+  padding: 3em 50px 3em calc(10% + 60px);
   position: relative;
-  border-bottom: 1px solid;
+  background-color: $COLOR--white;
+  color: #1B191B;
 
   &:before,
   &:after {
     position: absolute;
-    left: 30px;
+    left: calc(10% + 20px);
   }
 
   &:before {
