--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -24,6 +24,10 @@
     text-align: center;
   }
 
+  &__error {
+    margin-top: 16px;
+  }
+
   &__sign-in-form {
     margin-top: 32px;
     display: flex;
