US6.1: added app-layout, agents page, toolbar and sidebar components
Issue: US6.1

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -8,3 +8,7 @@ $azure-radiance: #007fff;
 $slate-gray: #74818e;
 $dark-blue: #0f2434;
 $red-color: #ff0202;
+$athens-gray: #f2f4f7;
+$athens-gray-dark: #e9ebf0;
+$regent-gray: #8f9da8;
+$thunder-color: #1b191b;
