--- a/src/layouts/app-layout/app-layout.module.scss
+++ b/src/layouts/app-layout/app-layout.module.scss
@@ -1,17 +1,31 @@
+@import '../../common/style-guide/index';
+
 .app-layout {
-  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
   height: 100%;
-  min-width: 320px;
   overflow: hidden;
 
+  &__sidebar {
+    height: 100%;
+    width: 64px;
+  }
+
+  &__content-wrapper {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+  }
+
+  &__header {
+    height: 50px;
+    width: 100%;
+    border-bottom: 1px solid $athens-gray-dark;
+  }
+
   &__content {
-    position: relative;
-    box-sizing: border-box;
-    width: calc(100% - 80px);
-    padding: 25px;
-    margin: 0 40px 15px 40px;
+    display: flex;
+    flex-grow: 1;
   }
 }
