US6.1: added toggle, added agents stub
Issue: US6.1

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -12,3 +12,5 @@ $athens-gray: #f2f4f7;
 $athens-gray-dark: #e9ebf0;
 $regent-gray: #8f9da8;
 $thunder-color: #1b191b;
+$green-color: #00b602;
+$porcelain-color: #e5e9eb;
