--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -64,7 +64,7 @@
     font-family: $semibold-font;
     font-size: 14px;
     line-height: 22px;
-    cursor: pointer;
+    opacity: 0.25;
   }
 
   &__copyright {
