--- a/src/common/style-guide/fonts.scss
+++ b/src/common/style-guide/fonts.scss
@@ -1,4 +1,4 @@
-$semibold-font: 'Open Sans Semibold';
-$light-font: 'Open Sans Light';
-$regular-font: 'Open Sans';
-$condbold-font: 'Open Sans Condensed';
+$semibold-font: 'OpenSans-Semibold';
+$light-font: 'OpenSans-Light';
+$regular-font: 'OpenSans';
+$condbold-font: 'OpenSansCondBold';
