--- a/src/pages/agents-page/agents-page.module.scss
+++ b/src/pages/agents-page/agents-page.module.scss
@@ -30,4 +30,13 @@
     line-height: 24px;
     text-align: center;
   }
+
+  // stub for demo should be removed
+  &__name-column {
+    color: $azure-radiance;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 48px;
+    cursor: pointer;
+  }
 }
