--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -15,7 +15,7 @@
   }
 
   &__title {
-    color: $dark-blue;
+    color: map-get($color-palette, dark-blue);
     font-size: 32px;
     line-height: $common-element-height;
     text-align: center;
@@ -60,7 +60,7 @@
   &__forgot-password {
     margin-top: 8px;
     margin-bottom: 42px;
-    color: $azure-radiance;
+    color: map-get($color-palette, blue100);
     font-family: $semibold-font;
     font-size: 14px;
     line-height: 22px;
