--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -10,8 +10,8 @@
     &:not(.button--disabled) {
       cursor: pointer;
       opacity: 0.75;
-      background-color: $azure-radiance;
-      color: $white-color;
+      background-color: map-get($color-palette, blue100);
+      color: map-get($color-palette, white);
     }
   }
 
@@ -22,17 +22,17 @@
   &--type {
     &--primary {
       font-family: $regular-font;
-      border: 1px solid $azure-radiance;
-      background-color: $azure-radiance;
-      color: $white-color;
+      border: 1px solid map-get($color-palette, blue100);
+      background-color: map-get($color-palette, blue100);
+      color: map-get($color-palette, white);
       font-size: 16px;
       line-height: 22px;
     }
     &--secondary {
       font-family: $semibold-font;
-      border: 1px solid $azure-radiance;
-      background-color: $white-color;
-      color: $azure-radiance;
+      border: 1px solid map-get($color-palette, blue100);
+      background-color: map-get($color-palette, white);
+      color: map-get($color-palette, blue100);
       font-size: 14px;
       line-height: 19px;
     }
