--- a/src/pages/login-page/error-panel/error-panel.module.scss
+++ b/src/pages/login-page/error-panel/error-panel.module.scss
@@ -9,7 +9,7 @@
   background-color: rgba(255, 2, 2, 0.1);
   font-size: 14px;
   line-height: 24px;
-  color: $red-color;
+  color: map-get($color-palette, red100);
 
   &__icon {
     margin-left: 23px;
