--- a/src/pages/logs-page/logs-page.module.scss
+++ b/src/pages/logs-page/logs-page.module.scss
@@ -14,11 +14,11 @@
   }
 
   &__icon {
-    color: $porcelain-color;
+    color: map-get($color-palette, light-blue);
   }
 
   &__title {
-    color: $regent-gray;
+    color: map-get($color-palette, middle-blue);
     font-size: 24px;
     line-height: 32px;
     text-align: center;
