--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -8,6 +8,9 @@
   border-bottom: 1px solid map-get($color-palette, light-blue);
 
   &__content {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
     margin: 0 24px;
   }
 
@@ -28,5 +31,11 @@
   &__search-button {
     margin-left: 34px;
     color: map-get($color-palette, blue100);
+  }
+
+  &__actions {
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
   }
 }
