--- a/src/pages/agents-page/agents-page.module.scss
+++ b/src/pages/agents-page/agents-page.module.scss
@@ -9,25 +9,11 @@
     display: flex;
     flex-flow: row wrap;
     margin: 24px;
+    flex-grow: 1;
 
     & > * {
       margin-right: 8px;
       margin-bottom: 16px;
     }
-  }
-
-  &__title {
-    color: map-get($color-palette, middle-blue);
-    font-size: 24px;
-    line-height: 32px;
-    text-align: center;
-    margin: 40px 0 8px 0;
-  }
-
-  &__sub-title {
-    color: $slate-gray;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
   }
 }
