--- a/src/components/toggler/toggler.module.scss
+++ b/src/components/toggler/toggler.module.scss
@@ -1,76 +1,66 @@
 @import '../../common/style-guide/index';
 
-$checkbox-toggler-area-height: 14px;
-$checkbox-toggler-height: 10px;
-
 .toggler {
-  color: rgba(33, 33, 33, 0.65);
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 16px;
-  color: map-get($color-palette, green100);
-  display: flex;
-  align-items: center;
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 12px;
 
   &__input {
-    visibility: hidden;
-    position: absolute;
-  }
+    opacity: 0;
+    width: 0;
+    height: 0;
 
-  &__toggler-label {
-    position: relative;
-    display: inline-block;
-    width: 20px;
-    height: $checkbox-toggler-area-height;
-    background-color: rgba(3, 3, 3, 0.24);
-    border-radius: $checkbox-toggler-area-height;
-    cursor: pointer;
-    box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
-    margin-right: 12px;
-    background-color: map-get($color-palette, green100);
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+      margin: 0;
+    }
 
-    &:before {
-      content: '';
-      position: absolute;
-      top: 2px;
-      left: 9px;
-      height: $checkbox-toggler-height;
-      width: $checkbox-toggler-height;
-      background-color: map-get($color-palette, white);
-      border-radius: $checkbox-toggler-height;
-      box-shadow: 0 2px 4px 0 rgba(3, 3, 3, 0.44);
+    &--checked ~ .toggler__slider {
+      background-color: map-get($color-palette, green100);
+    }
+
+    &--checked ~ .toggler__slider:before {
+      transform: translateX(8px);
     }
   }
-}
 
-@keyframes move-right {
-  0% {
-    width: $checkbox-toggler-height;
-    transform: translateX(0);
+  &__slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: map-get($color-palette, middle-blue);
+    transition: 0.4s;
+    border-radius: 6px;
+
+    &::before {
+      position: absolute;
+      content: '';
+      height: 10px;
+      width: 10px;
+      left: 1px;
+      bottom: 1px;
+      background-color: map-get($color-palette, white);
+      transition: 0.4s;
+      border-radius: 50%;
+    }
   }
 
-  45% {
-    width: $checkbox-toggler-height + 7px;
-  }
+  &__label {
+    position: absolute;
+    left: 28px;
+    top: -4px;
+    font-size: 14px;
+    color: map-get($color-palette, middle-blue);
+    white-space: nowrap;
 
-  100% {
-    width: $checkbox-toggler-height;
-    transform: translateX($checkbox-toggler-area-height);
-  }
-}
-
-@keyframes move-left {
-  0% {
-    width: $checkbox-toggler-height;
-    transform: translateX($checkbox-toggler-area-height);
-  }
-
-  45% {
-    width: $checkbox-toggler-height + 7px;
-  }
-
-  100% {
-    width: $checkbox-toggler-height;
-    transform: translateX(0);
+    &--checked {
+      color: map-get($color-palette, green100);
+    }
   }
 }
