added multiple enable/disable to table-view

--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -33,6 +33,10 @@
     color: map-get($color-palette, blue100);
   }
 
+  &__items-actions {
+    margin-left: 100px;
+  }
+
   &__actions {
     display: flex;
     flex-grow: 1;
