--- a/src/pages/agents-page/card-view/card-view.module.scss
+++ b/src/pages/agents-page/card-view/card-view.module.scss
@@ -1,4 +1,10 @@
 .card-view {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+
+  & > * {
+    margin-right: 8px;
+    margin-bottom: 16px;
+  }
 }
