--- a/src/pages/agents-page/table-view/table-view.module.scss
+++ b/src/pages/agents-page/table-view/table-view.module.scss
@@ -15,4 +15,16 @@
   &__status-column {
     display: flex;
   }
+
+  &__actions-column {
+    color: map-get($color-palette, blue100);
+
+    :not(:first-child) {
+      margin-left: 24px;
+    }
+
+    & > * {
+      cursor: pointer;
+    }
+  }
 }
