US3.10: added admin-info page-header/page-header
Issue: US3.10

--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -42,4 +42,14 @@
     display: inline-block;
     padding-right: 12px;
   }
+
+  &--wide-columns {
+    tbody {
+      tr {
+        td {
+          height: 79px;
+        }
+      }
+    }
+  }
 }
