--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -42,4 +42,10 @@
     flex-grow: 1;
     justify-content: flex-end;
   }
+
+  &--border-color {
+    &--black {
+      border-bottom: 1px solid map-get($color-palette, black100);
+    }
+  }
 }
