--- a/src/pages/agent-info-page/agent-info-page.module.scss
+++ b/src/pages/agent-info-page/agent-info-page.module.scss
@@ -7,7 +7,8 @@
 
   &__content {
     display: flex;
-    margin: 24px;
+    flex-direction: column;
+    margin: 0 24px 24px 24px;
     flex-grow: 1;
   }
 
@@ -33,6 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 32px;
 
     span {
       margin-left: 8px;
@@ -50,5 +52,25 @@
     color: map-get($color-palette, blue100);
     margin-left: 16px;
     cursor: pointer;
+  }
+
+  &__plugins-table-title {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  &__add-plugin {
+    width: 135px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 32px;
+
+    span {
+      margin-left: 8px;
+    }
   }
 }
