US3.10: added ability to add plugins from library to agent
Issue: US3.10

--- a/src/pages/agent-info-page/agent-info-page.module.scss
+++ b/src/pages/agent-info-page/agent-info-page.module.scss
@@ -20,6 +20,8 @@
   &__toggle-agent {
     display: flex;
     margin-left: 24px;
+    height: 20px;
+    align-items: center;
   }
 
   &__header-actions {
