--- a/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
+++ b/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
@@ -11,9 +11,12 @@
     display: flex;
     justify-content: space-between;
     margin: 14px 16px 16px 16px;
-    color: map-get($color-palette, blue100);
     font-size: 14px;
     font-weight: 600;
+  }
+
+  &__header-name {
+    color: map-get($color-palette, blue100);
   }
 
   &__header-icons-wrapper {
