--- a/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
+++ b/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
@@ -20,6 +20,8 @@
   }
 
   &__header-icons-wrapper {
+    color: map-get($color-palette, blue100);
+
     & > * {
       &:first-child {
         margin-right: 16px;
