added flex panel layout

--- a/src/pages/agent-full-page/agent-full-page.module.scss
+++ b/src/pages/agent-full-page/agent-full-page.module.scss
@@ -9,6 +9,8 @@
     width: 12px;
     border-radius: 6px;
     background-color: map-get($color-palette, red100);
+    margin-right: 8px;
+
     &--status {
       background-color: map-get($color-palette, green100);
     }
