US10.5: added expandable table, added added coverage-plugin layout
Issue: US10.5

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -17,6 +17,7 @@ $color-palette: (
   blue100: #007fff,
   blue15: #d9ecff,
   yellow100: #f8e71c,
+  yellow50: #faa214,
   yellow10: #fefce8,
   red100: #ff0202,
   red10: #ffe5e5,
