--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -43,11 +43,22 @@
     padding-right: 12px;
   }
 
-  &--wide-columns {
-    tbody {
-      tr {
-        td {
-          height: 79px;
+  &--columns-size {
+    &--wide {
+      tbody {
+        tr {
+          td {
+            height: 79px;
+          }
+        }
+      }
+    }
+    &--medium {
+      tbody {
+        tr {
+          td {
+            height: 55px;
+          }
         }
       }
     }
