--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -13,8 +13,9 @@
   &__summary-wrapper {
     display: flex;
     flex-direction: row;
+    margin-bottom: 24px;
 
-    :first-child {
+    & > div:first-child {
       margin-right: 16px;
     }
   }
