--- a/src/common/style-guide/common.scss
+++ b/src/common/style-guide/common.scss
@@ -19,3 +19,10 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
+h2 {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 24px;
+  color: map-get($color-palette, middle-blue);
+}
