--- a/src/layouts/plugins-layout/plugins-layout.module.scss
+++ b/src/layouts/plugins-layout/plugins-layout.module.scss
@@ -5,11 +5,12 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 
   &__header {
     height: 38px;
     width: 100%;
+    flex-shrink: 0;
   }
 
   &__sidebar {
@@ -25,9 +26,8 @@
   }
 
   &__content {
-    display: flex;
-    flex-grow: 1;
     border: 1px solid map-get($color-palette, light-blue);
     margin: 5px;
+    overflow-y: auto;
   }
 }
