--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-details.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-details.module.scss
@@ -10,4 +10,15 @@
     line-height: 24px;
     border-bottom: 1px solid map-get($color-palette, light-blue);
   }
+
+  &__title {
+    height: 58px;
+    border-bottom: 1px solid map-get($color-palette, black100);
+    font-size: 18px;
+    line-height: 24px;
+
+    & > * {
+      margin-right: 8px;
+    }
+  }
 }
