--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/name-cell/name-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/name-cell/name-cell.module.scss
@@ -2,8 +2,20 @@
 
 .name-cell {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  position: relative;
+
+  &__prefix {
+    position: absolute;
+    top: 2px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+  }
 
   &__class-name {
     height: 19px;
@@ -16,5 +28,9 @@
     height: 16px;
     font-size: 12px;
     color: $slate-gray;
+  }
+
+  &--with-margin {
+    margin-left: 50px;
   }
 }
