--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -29,8 +29,13 @@
   }
 
   &__row {
-    &--expanded {
-      background-color: rgba(0, 127, 255, 0.15);
+    &--color {
+      &--blue {
+        background-color: rgba(0, 127, 255, 0.15);
+      }
+      &--gray {
+        background-color: rgba(143, 157, 168, 0.15);
+      }
     }
   }
 
