--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../../common/style-guide/index';
 
-.name-call {
+.name-cell {
   display: flex;
   flex-direction: row;
   position: relative;
@@ -15,8 +15,18 @@
     flex-direction: column;
     justify-content: center;
     margin-left: 20px;
+  }
+
+  &__class-name {
+    height: 19px;
     color: map-get($color-palette, black100);
     font-size: 14px;
     font-weight: 600;
+  }
+
+  &__class-path {
+    height: 16px;
+    font-size: 12px;
+    color: $slate-gray;
   }
 }
