--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/compound-cell/compound-cell.module.scss
@@ -26,7 +26,20 @@
 
   &__class-path {
     height: 16px;
+    max-width: 700px;
     font-size: 12px;
     color: $slate-gray;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  &--type {
+    &--primary {
+      margin-left: 30px;
+    }
+
+    &--secondary {
+      margin-left: 100px;
+    }
   }
 }
