--- a/src/components/table/expandable-table/row-expander/row-expander.module.scss
+++ b/src/components/table/expandable-table/row-expander/row-expander.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  position: relative;
 
   &__icon {
     display: flex;
@@ -14,6 +15,12 @@
 
     &--expanded {
       transform: rotate(90deg);
+    }
+
+    &--with-margin {
+      position: absolute;
+      right: -22px;
+      top: -7px;
     }
   }
 }
