US10.7_FE: added ability to change build-version
Issue: US10.7_FE

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -21,9 +21,15 @@
   }
 
   &__title {
+    display: flex;
+    align-items: center;
     width: 100%;
     color: map-get($color-palette, black100);
     margin-bottom: 16px;
+  }
+
+  &__build-version {
+    margin-left: 16px;
   }
 
   &__summary-wrapper {
