--- a/src/components/dropdown/dropdown.module.scss
+++ b/src/components/dropdown/dropdown.module.scss
@@ -33,7 +33,7 @@
     flex-direction: column;
     padding: 16px;
     width: 216px;
-    height: 345px;
+    max-height: 345px;
     overflow-y: auto;
     background-color: map-get($color-palette, white);
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.15);
