--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
@@ -22,6 +22,7 @@
 
   &__content {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
     margin: 16px 24px;
     overflow-y: auto;
