DJ4-55: fix agent full page header
Issue: DJ4-55

--- a/src/pages/agent-full-page/agent-full-page.module.scss
+++ b/src/pages/agent-full-page/agent-full-page.module.scss
@@ -15,4 +15,19 @@
       background-color: map-get($color-palette, green100);
     }
   }
+
+  &__agent-name {
+    color: map-get($color-palette, dark-blue);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    margin-right: 8px;
+  }
+
+  &__agent-ip-address {
+    color: map-get($color-palette, dark-blue);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+  }
 }
