D4J-61: new methods modal
Issue: D4J-61

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -43,10 +43,18 @@
   }
 
   &__warning-icon {
+    margin-right: 8px;
     color: map-get($color-palette, red100);
   }
 
   &__success-icon {
+    margin-right: 8px;
     color: map-get($color-palette, green100);
+  }
+
+  &__new-methods {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
   }
 }
