--- a/src/pages/agent-full-page/coverage-plugin/new-methods-modal/new-methods-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/new-methods-modal/new-methods-modal.module.scss
@@ -1,6 +1,6 @@
-@import '../../../../../common/style-guide/index';
+@import '../../../../common/style-guide/index';
 
-.associated-test-modal {
+.new-methods-modal {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -28,22 +28,50 @@
     overflow-y: auto;
   }
 
-  &__test-list {
+  &__methods-list {
     display: flex;
     flex-direction: column;
     font-size: 14px;
   }
 
-  &__test-list-item {
+  &__methods-list-item {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 24px;
-    word-break: normal;
-    word-wrap: normal;
-    overflow-wrap: normal;
+    word-break: break-all;
+    overflow: hidden;
   }
-  &__test-list-item-icon {
+
+  &__methods-list-item-icon {
     margin-right: 18px;
+  }
+
+  &__method-signature {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+  }
+
+  &__method-descriptor {
+    font-size: 12px;
+    color: $slate-gray;
+  }
+
+  &__coverage-icon-wrapper {
+    margin-left: 16px;
+    &--type {
+      &--success {
+        color: map-get($color-palette, green100);
+      }
+
+      &--warning {
+        color: map-get($color-palette, yellow50);
+      }
+
+      &--error {
+        color: map-get($color-palette, red100);
+      }
+    }
   }
 }
