D4J-66: fix associated-test-modal test icon align
Issue: D4J-66

--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
@@ -43,7 +43,10 @@
     word-wrap: normal;
     overflow-wrap: normal;
   }
+
   &__test-list-item-icon {
+    display: flex;
+    align-items: center;
     margin-right: 18px;
   }
 }
