D4J-72: added text-decoration to NewMethod
Issue: D4J-72

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -55,6 +55,12 @@
   &__new-methods {
     display: flex;
     align-items: center;
+    text-decoration: underline;
     cursor: pointer;
+
+    &--disabled {
+      pointer-events: none;
+      text-decoration: none;
+    }
   }
 }
