D4J-69: remove font-weight property, added new fonts
Issue: D4J-69

--- a/src/common/style-guide/common.scss
+++ b/src/common/style-guide/common.scss
@@ -22,7 +22,7 @@ body {
 
 h2 {
   font-size: 18px;
-  font-weight: 300;
+  font-family: $light-font;
   line-height: 24px;
   color: map-get($color-palette, middle-blue);
 }
