--- a/src/components/tabs/tabs.module.scss
+++ b/src/components/tabs/tabs.module.scss
@@ -11,7 +11,7 @@
 
   &__tab {
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
     line-height: 20px;
     color: map-get($color-palette, blue100);
 
