--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
@@ -9,14 +9,14 @@
   &__title {
     margin: 14px 16px;
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
     color: map-get($color-palette, black50);
   }
 
   &__code-coverage {
     margin: 14px 16px;
     font-size: 32px;
-    font-weight: 300;
+    font-family: $light-font;
     line-height: 32px;
 
     &--type {
