--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/name-cell/name-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/name-cell/name-cell.module.scss
@@ -17,6 +17,6 @@
     margin-left: 20px;
     color: map-get($color-palette, black100);
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
   }
 }
