--- a/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
+++ b/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
@@ -12,7 +12,7 @@
     justify-content: space-between;
     margin: 14px 16px 16px 16px;
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
   }
 
   &__header-name {
