--- a/src/common/style-guide/fonts.scss
+++ b/src/common/style-guide/fonts.scss
@@ -1,4 +1,4 @@
-$semibold-font: 'OpenSans-Semibold';
-$light-font: 'OpenSans-Light';
-$regular-font: 'OpenSans';
-$condbold-font: 'OpenSansCondBold';
+$semibold-font: 'OpenSans-Semibold', sans-serif;
+$light-font: 'OpenSans-Light', sans-serif;
+$regular-font: 'OpenSans', sans-serif;
+$condbold-font: 'OpenSansCondBold', sans-serif;
