--- a/src/components/dropdown/dropdown.module.scss
+++ b/src/components/dropdown/dropdown.module.scss
@@ -11,7 +11,7 @@
 
   &__value {
     font-size: 16px;
-    font-weight: 300;
+    font-family: $light-font;
     line-height: 20px;
     color: $gravel-color;
   }
