--- a/src/components/items-actions/items-actions.module.scss
+++ b/src/components/items-actions/items-actions.module.scss
@@ -4,7 +4,7 @@
   &__count {
     color: $gravel-color;
     font-size: 16px;
-    font-weight: 300;
+    font-family: $light-font;
     line-height: 20px;
   }
 
