--- a/src/pages/agent-full-page/coverage-plugin/card/card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/card/card.module.scss
@@ -16,7 +16,7 @@
   &__main-text {
     margin: 14px 16px;
     font-size: 32px;
-    font-weight: 300;
+    font-family: $light-font;
     line-height: 32px;
 
     &--color {
