--- a/src/pages/agent-info-page/add-plugins-modal/selectable-list/selectable-list.module.scss
+++ b/src/pages/agent-info-page/add-plugins-modal/selectable-list/selectable-list.module.scss
@@ -19,7 +19,7 @@
   &__plugin-name {
     color: map-get($color-palette, blue100);
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
   }
 
   &__plugin-description {
