--- a/src/pages/agent-info-page/agent-info-page.module.scss
+++ b/src/pages/agent-info-page/agent-info-page.module.scss
@@ -26,7 +26,7 @@
 
   &__toggle-agent-header {
     font-size: 16px;
-    font-weight: 300;
+    font-family: $light-font;
     line-height: 20px;
     top: -9px;
   }
