--- a/src/pages/agents-page/table-view/name-column/name-column.module.scss
+++ b/src/pages/agents-page/table-view/name-column/name-column.module.scss
@@ -3,7 +3,7 @@
 .name-column {
   color: map-get($color-palette, blue100);
   font-size: 14px;
-  font-weight: 600;
+  font-family: $semibold-font;
   line-height: 48px;
   cursor: pointer;
 }
