--- a/src/pages/agent-info-page/add-plugins-modal/add-plugins-modal.module.scss
+++ b/src/pages/agent-info-page/add-plugins-modal/add-plugins-modal.module.scss
@@ -52,5 +52,8 @@
   &__cancel-button {
     min-height: 32px;
     max-width: 78px;
+    background-color: map-get($color-palette, light-blue);
+    border: 1px solid $slate-gray;
+    color: $slate-gray;
   }
 }
