--- a/src/components/table-checkbox/table-checkbox.module.scss
+++ b/src/components/table-checkbox/table-checkbox.module.scss
@@ -1,10 +1,14 @@
 @import '../../common/style-guide/index';
 
 .table-checkbox {
-  display: flex;
-  align-items: center;
   cursor: pointer;
   color: map-get($color-palette, light-blue);
+
+  &__icon-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 14px;
+  }
 
   &--selected {
     color: map-get($color-palette, blue100);
