--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -35,6 +35,9 @@
       &--gray {
         background-color: rgba(143, 157, 168, 0.15);
       }
+      &--yellow {
+        background-color: rgba(248, 231, 28, 0.1);
+      }
     }
   }
 
