D4J-60: added notification-manager
Issue: D4J-60

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -20,6 +20,7 @@ $color-palette: (
   yellow50: #faa214,
   yellow10: #fefce8,
   red100: #ff0202,
+  red50: #e70100,
   red10: #ffe5e5,
   green100: #00b602,
   green10: #e5f7e5,
