D4J-80: remove font-weight property
Issue: D4J-80

--- a/src/components/message-panel/message-panel.module.scss
+++ b/src/components/message-panel/message-panel.module.scss
@@ -15,7 +15,7 @@
     margin-left: 80px;
     color: map-get($color-palette, white);
     font-size: 14px;
-    font-weight: 600;
+    font-family: $semibold-font;
     line-height: 19px;
     position: absolute;
 
