--- a/src/components/tabs/tabs.module.scss
+++ b/src/components/tabs/tabs.module.scss
@@ -17,7 +17,7 @@
     white-space: nowrap;
     outline: none;
     color: map-get($color-palette, blue100);
-    font-family: 'OpenSans-Semibold';
+    font-family: $semibold-font;
     font-size: 14px;
     margin-right: 28px;
 
