D4J-88: added spinner while gathering tests coverage
Issue: D4J-88

--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/code-coverage-card.module.scss
@@ -55,4 +55,15 @@
   &__success-icon {
     color: map-get($color-palette, green100);
   }
+
+  &__spinner-wrapper {
+    margin: 14px 16px;
+    color: map-get($color-palette, middle-blue);
+    font-size: 14px;
+    line-height: 20px;
+
+    & > * {
+      margin-right: 8px;
+    }
+  }
 }
