EPMDJ-28: added agent-settings-page
Issue: EPMDJ-28

--- a/src/components/dropdown/dropdown.module.scss
+++ b/src/components/dropdown/dropdown.module.scss
@@ -22,7 +22,7 @@
     transform: rotate(90deg);
   }
 
-  &__itemListWrapper {
+  &__item-list-wrapper {
     position: absolute;
     top: 34px;
     z-index: 150;
