--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -1,6 +1,7 @@
 $slate-gray: #74818e;
 $athens-gray: #f2f4f7;
 $gravel-color: #464547;
+$loblolly-color: #bdc7cc;
 
 $color-palette: (
   white: #fff,
