--- a/src/pages/agent-full-page/coverage-plugin/new-methods-modal/new-methods-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/new-methods-modal/new-methods-modal.module.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     flex-grow: 1;
     margin: 16px 24px;
-    overflow-y: auto;
+    overflow-y: hidden;
   }
 
   &__methods-list {
