--- a/src/pages/agent-settings-page/agent-settings-page.module.scss
+++ b/src/pages/agent-settings-page/agent-settings-page.module.scss
@@ -16,6 +16,20 @@
     font-family: $semibold-font;
   }
 
+  &__error-message {
+    height: 40px;
+    width: 100%;
+    background-color: rgba(255, 2, 2, 0.1);
+    font-size: 14px;
+    line-height: 24px;
+    color: map-get($color-palette, red100);
+  }
+
+  &__error-message-icon {
+    margin-left: 24px;
+    margin-right: 8px;
+  }
+
   &__content {
     margin: 32px 24px;
   }
