--- a/src/components/message-panel/message-panel.module.scss
+++ b/src/components/message-panel/message-panel.module.scss
@@ -2,8 +2,9 @@
 
 .message-panel {
   height: 48px;
-  width: 100%;
+  width: calc(100% - 80px);
   position: absolute;
+  right: 0;
   z-index: 100;
 
   &__content {
@@ -11,8 +12,7 @@
     align-items: center;
     flex-grow: 1;
     height: 100%;
-    width: calc(100% - 80px);
-    margin-left: 80px;
+    width: 100%;
     color: map-get($color-palette, white);
     font-size: 14px;
     font-family: $semibold-font;
