EPMDJ-32: added agents registration, refactor agent status, refactor build-version
Issue: EPMDJ-32

--- a/src/pages/agents-page/table-view/name-column/name-column.module.scss
+++ b/src/pages/agents-page/table-view/name-column/name-column.module.scss
@@ -6,4 +6,9 @@
   font-family: $semibold-font;
   line-height: 48px;
   cursor: pointer;
+
+  &--unregistered {
+    pointer-events: none;
+    color: $slate-gray;
+  }
 }
