--- a/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
+++ b/src/pages/agents-page/card-view/agent-card/agent-card.module.scss
@@ -33,6 +33,7 @@
     display: flex;
     align-items: center;
     margin: 14px 16px 16px 16px;
+    font-family: $semibold-font;
   }
 
   &__active-plugins {
@@ -40,6 +41,19 @@
     font-size: 13px;
     line-height: 20px;
     color: map-get($color-palette, middle-blue);
+  }
+
+  &__register-agent {
+    margin: 14px 16px 16px 16px;
+    min-height: 32px;
+    width: 108px;
+    font-family: $semibold-font;
+    font-size: 14px;
+    line-height: 19px;
+  }
+
+  &__register-icon {
+    margin-right: 8px;
   }
 
   &__desctiption {
