EPMDJ-35: added unregister agent modal
Issue: EPMDJ-35

--- a/src/pages/agent-settings-page/agent-settings-page.module.scss
+++ b/src/pages/agent-settings-page/agent-settings-page.module.scss
@@ -9,9 +9,18 @@
   }
 
   &__save-changes-button {
+    margin-right: 16px;
     min-height: 32px;
     border-radius: 16px;
     width: 122px;
+    font-size: 14px;
+    font-family: $semibold-font;
+  }
+
+  &__unregister-agent-button {
+    min-height: 32px;
+    width: 108px;
+    border-radius: 16px;
     font-size: 14px;
     font-family: $semibold-font;
   }
