--- a/src/components/popup/popup.module.scss
+++ b/src/components/popup/popup.module.scss
@@ -25,9 +25,16 @@
     top: 50%;
     left: 50%;
     z-index: 100;
-    box-shadow: 0 -4px 0 0 map-get($color-palette, blue100), 0 0 24px 0 rgba(0, 0, 0, 0.15);
     background-color: map-get($color-palette, white);
     transform: translate(-50%, -50%);
+    &--type {
+      &--info {
+        box-shadow: 0 -4px 0 0 map-get($color-palette, blue100), 0 0 24px 0 rgba(0, 0, 0, 0.15);
+      }
+      &--error {
+        box-shadow: 0 -4px 0 0 map-get($color-palette, red100), 0 0 24px 0 rgba(0, 0, 0, 0.15);
+      }
+    }
   }
 
   &__fade {
