--- a/src/pages/agent-settings-page/agent-settings-form/agent-settings-form.module.scss
+++ b/src/pages/agent-settings-page/agent-settings-form/agent-settings-form.module.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  &__copy-button {
+    color: map-get($color-palette, blue100);
+    cursor: pointer;
+  }
+
   &__group {
     grid-column-start: 1;
     grid-column-end: 2;
