EPMDJ-166: added ability to create new scopes
Issue: EPMDJ-166

--- a/src/forms/inputs/button/button.module.scss
+++ b/src/forms/inputs/button/button.module.scss
@@ -5,15 +5,16 @@
   min-height: $common-element-height;
   width: 320px;
   outline: 0;
+  cursor: pointer;
 
-  &:hover {
-    &:not(.button--disabled) {
-      cursor: pointer;
-      opacity: 0.75;
-      background-color: map-get($color-palette, blue100);
-      color: map-get($color-palette, white);
-    }
-  }
+  // &:hover {
+  //   &:not(.button--disabled) {
+  //     cursor: pointer;
+  //     opacity: 0.75;
+  //     background-color: map-get($color-palette, blue100);
+  //     color: map-get($color-palette, white);
+  //   }
+  // }
 
   &--disabled {
     opacity: 0.25;
