--- a/src/forms/inputs/dropdown/dropdown.module.scss
+++ b/src/forms/inputs/dropdown/dropdown.module.scss
@@ -10,9 +10,9 @@
   }
 
   &__value {
-    font-size: 16px;
-    font-family: $light-font;
-    line-height: 20px;
+    font-size: 14px;
+    font-family: $regular-font;
+    line-height: 24px;
     color: $gravel-color;
   }
 
