--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -3,6 +3,13 @@
 .coverage-plugin {
   height: 100%;
 
+  &__routing-tabs-panel {
+    height: 49px;
+    width: 100%;
+    padding-left: 24px;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
+  }
+
   &__content {
     margin: 33px 29px;
   }
@@ -18,18 +25,6 @@
     color: map-get($color-palette, blue100);
     margin-left: 16px;
     cursor: pointer;
-  }
-
-  &__title {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    color: map-get($color-palette, black100);
-    margin-bottom: 16px;
-  }
-
-  &__build-version {
-    margin-left: 16px;
   }
 
   &__summary-wrapper {
