EPMDJ-365: added scopes-list
Issue: EPMDJ-365

--- a/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
@@ -64,4 +64,18 @@
     line-height: 80px;
     color: map-get($color-palette, black100);
   }
+
+  &__test-type-coverage {
+    font-size: 12px;
+    line-height: 20px;
+    color: map-get($color-palette, black100);
+    font-family: $semibold-font;
+  }
+
+  &__test-type-test-count {
+    font-size: 12px;
+    line-height: 20px;
+    color: $slate-gray;
+    font-family: $regular-font;
+  }
 }
