--- a/src/forms/inputs/checkbox/checkbox.module.scss
+++ b/src/forms/inputs/checkbox/checkbox.module.scss
@@ -3,6 +3,8 @@
 .checkbox {
   cursor: pointer;
   color: map-get($color-palette, light-blue);
+  display: flex;
+  align-items: center;
 
   &__icon-wrapper {
     display: flex;
@@ -10,7 +12,20 @@
     margin-left: 14px;
   }
 
+  &__label {
+    margin-left: 8px;
+    font-size: 14px;
+    line-height: 24px;
+    color: map-get($color-palette, dark-blue);
+  }
+
   &--selected {
     color: map-get($color-palette, blue100);
+  }
+
+  &--without-margin {
+    .checkbox__icon-wrapper {
+      margin-left: 0;
+    }
   }
 }
